--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,8 +8,12 @@ $accent-white-1: #ebebeb;
 $accent-white-2: #dadada;
 $accent-white-3: #c4c4c4;
 $accent-white-4: #b3b3b3;
+$accent-white-5: #a5a5a5;
 
 $red-1: rgb(223, 60, 60);
 $red-2: rgba(223, 60, 60, 0.65);
 
-$teal: rgb(29, 79, 94);
+$teal: rgba(79, 214, 255, 0.74);
+
+$laptop: 992px;
+$desktop: 1500px;
