--- a/src/globals.scss
+++ b/src/globals.scss
@@ -40,6 +40,13 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  @media only screen and (min-width: $laptop) {
+    margin: 2rem 15rem;
+  }
+
+  @media only screen and (min-width: $desktop) {
+    margin: 2rem 25rem;
+  }
 }
 
 /* p {
@@ -52,6 +59,10 @@ p {
   font-size: 1.1rem;
   font-weight: 300;
   color: $accent-white-3;
+
+  @media only screen and (min-width: $laptop) {
+    font-size: 1.3rem;
+  }
 }
 
 span {
@@ -63,6 +74,13 @@ h1 {
   font-size: 2.6rem;
   font-weight: 700;
   margin-bottom: 1rem;
+  @media only screen and (min-width: $laptop) {
+    font-size: 3.5rem;
+  }
+
+  @media only screen and (min-width: $desktop) {
+    font-size: 4rem;
+  }
 }
 
 h2 {
@@ -72,8 +90,15 @@ h2 {
 
 h3 {
   font-size: 1.5rem;
-  /* font-style: italic; */
   font-weight: 400;
+  margin-bottom: -1rem;
+}
+
+h4 {
+  font-size: 0.95rem;
+  font-weight: 300;
+  color: $accent-white-5;
+  font-style: italic;
 }
 
 /* h1 {
