--- a/src/scss/Navbar.scss
+++ b/src/scss/Navbar.scss
@@ -12,6 +12,8 @@
   justify-content: center;
 } */
 
+// MOBILE AND TABLET
+
 .navbar-container {
   background-color: $accent-grey-1;
   padding: 0.5rem 1rem;
@@ -19,6 +21,14 @@
   justify-content: space-between;
   align-items: center;
   list-style-type: none;
+
+  @media only screen and (min-width: $laptop) {
+    padding: 0.5rem 15rem;
+  }
+
+  @media only screen and (min-width: $desktop) {
+    padding: 0.5rem 25rem;
+  }
 }
 
 .icon {
@@ -30,9 +40,6 @@
   color: $red-1;
   font-weight: 700;
   text-shadow: 0px 0px 10px $red-2;
-}
-
-@media only screen and (min-width: 1224px) {
 }
 
 .burger-menu {
@@ -67,4 +74,14 @@
   background: $accent-grey-1;
   transition: all;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+}
+
+@media only screen and (min-width: $laptop) {
+  .navbar {
+    // width: 100%;
+    display: flex;
+    list-style-type: none;
+    justify-content: center;
+    gap: 1rem;
+  }
 }
