--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,8 +12,11 @@ $accent-white-5: #a5a5a5;
 
 $red-1: rgb(223, 60, 60);
 $red-2: rgba(223, 60, 60, 0.65);
+$red-3: rgba(223, 60, 60, 0.473);
 
 $teal: rgba(79, 214, 255, 0.74);
 
 $laptop: 992px;
 $desktop: 1500px;
+
+$page-width: 750px;
