--- a/src/scss/NavbarItem.module.scss
+++ b/src/scss/NavbarItem.module.scss
@@ -1,15 +1,15 @@
 @import "./variables";
 
-li {
+.navbar-item {
   padding: 0.5rem;
-  font-size: 1.2rem;
+  font-size: 0.85rem;
   cursor: pointer;
   font-weight: 700;
   opacity: 0.7;
   transition: all 0.15s;
 }
 
-li:hover {
+.navbar-item:hover {
   opacity: 1;
 }
 
