--- a/src/scss/NavbarItem.module.scss
+++ b/src/scss/NavbarItem.module.scss
@@ -6,7 +6,7 @@
   cursor: pointer;
   font-weight: 700;
   opacity: 0.7;
-  transition: all 0.15s;
+  transition: $transition;
 }
 
 .navbar-item:hover {
