--- a/src/scss/ProjectsPage.module.scss
+++ b/src/scss/ProjectsPage.module.scss
@@ -1,6 +1,9 @@
 @import "./variables";
 
 .project-card {
+  background-color: rgba(0, 0, 0, 0.082);
+  padding: 1rem;
+  border-radius: $border-radius-small;
   h3 {
     margin: 0;
   }
@@ -12,6 +15,46 @@
 
   img {
     max-width: 400px;
+  }
+
+  button,
+  form {
+    margin-bottom: 0.1rem;
+  }
+
+  .paragraphs {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .features {
+    p,
+    li {
+      font-size: 0.9rem;
+      font-weight: 700;
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop) {
+  .project-card {
+    img {
+      max-width: 300px;
+      align-self: center;
+    }
+    .content-and-image {
+      display: flex;
+      flex-direction: row-reverse;
+      gap: 3rem;
+    }
+    .features {
+      p,
+      li {
+        font-size: 1rem;
+        font-weight: 700;
+      }
+    }
   }
 }
 
@@ -50,22 +93,18 @@
   color: $red-1;
 }
 
+.btn-more-info {
+  background-color: $red-2;
+  // background-color: ;
+  border: none;
+  // border: 2px solid $red-2;
+  color: $accent-grey-2;
+  cursor: pointer;
+  transition: $transition;
+  font-weight: 600;
+  width: fit-content;
+  padding: 0 0.5rem;
+  border-radius: $border-radius-full;
+}
+
 // CSS for the individual project pages
-
-.preview {
-  width: 200px;
-}
-
-.tech-stack-tags {
-  list-style-type: none;
-  margin: 0;
-  display: flex;
-  gap: 0.5rem;
-  flex-wrap: wrap;
-  li {
-    font-size: 0.8rem;
-    background-color: $accent-grey-1;
-    padding: 0.5rem;
-    border-radius: $border-radius-small;
-  }
-}
