--- a/src/globals.scss
+++ b/src/globals.scss
@@ -40,10 +40,17 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  @media only screen and (min-width: $laptop) {
+
+  @media only screen and (min-width: $medium-screen) {
     margin: 2rem 0;
     align-self: center;
-    width: $page-width;
+    width: $page-width-medium;
+  }
+
+  @media only screen and (min-width: $bigger-screen) {
+    margin: 2rem 0;
+    align-self: center;
+    width: $page-width-big;
     // margin: 2rem 15rem;
   }
 
@@ -62,7 +69,7 @@ p,
 li {
   font-size: 1.1rem;
   color: $accent-white-3;
-  @media only screen and (min-width: $laptop) {
+  @media only screen and (min-width: $bigger-screen) {
     font-size: 1.3rem;
   }
 }
@@ -87,13 +94,13 @@ h1 {
   font-size: 2.6rem;
   font-weight: 700;
   margin-bottom: 1rem;
-  @media only screen and (min-width: $laptop) {
+  @media only screen and (min-width: $bigger-screen) {
     font-size: 3.5rem;
   }
 
-  @media only screen and (min-width: $desktop) {
-    font-size: 4rem;
-  }
+  // @media only screen and (min-width: $desktop) {
+  //   font-size: 4rem;
+  // }
 }
 
 h2 {
@@ -131,6 +138,18 @@ h2 {
 h3 {
   font-size: 2rem;
 } */
+
+.card {
+  background-color: rgba(0, 0, 0, 0.082);
+  padding: 1rem;
+  border-radius: $border-radius-small;
+  h3 {
+    margin-bottom: 0.5rem;
+  }
+  h4 {
+    margin-bottom: 1rem;
+  }
+}
 
 .btn {
   padding: 0.3rem 1rem;
