--- a/src/scss/Footer.module.scss
+++ b/src/scss/Footer.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  @media only screen and (min-width: $laptop) {
+  @media only screen and (min-width: $bigger-screen) {
     justify-content: center;
     gap: 2rem;
     padding: 0.7rem 1rem;
@@ -15,7 +15,7 @@
 
 .footer p {
   font-size: 1rem;
-  @media only screen and (min-width: $laptop) {
+  @media only screen and (min-width: $bigger-screen) {
     font-size: 1.2rem;
   }
 }
@@ -27,7 +27,7 @@
 
 .icon {
   font-size: 1.3rem;
-  @media only screen and (min-width: $laptop) {
+  @media only screen and (min-width: $bigger-screen) {
     font-size: 1.5rem;
   }
 }
