--- a/src/scss/ProjectsPage.module.scss
+++ b/src/scss/ProjectsPage.module.scss
@@ -1,9 +1,6 @@
 @import "./variables";
 
 .project-card {
-  background-color: rgba(0, 0, 0, 0.082);
-  padding: 1rem;
-  border-radius: $border-radius-small;
   h3 {
     margin: 0;
   }
@@ -14,7 +11,7 @@
   gap: 1rem;
 
   img {
-    max-width: 400px;
+    max-width: 300px;
   }
 
   button,
@@ -37,7 +34,7 @@
   }
 }
 
-@media only screen and (min-width: $laptop) {
+@media only screen and (min-width: $bigger-screen) {
   .project-card {
     img {
       max-width: 300px;
