portfolio is essentially finished

--- a/src/scss/HomePage.module.scss
+++ b/src/scss/HomePage.module.scss
@@ -80,6 +80,7 @@ h1 {
   background-clip: padding-box;
   background-color: $red-2;
   border: 2px solid $red-2;
+  text-decoration: none;
 }
 
 .btn-view-cv {
