--- a/src/globals.scss
+++ b/src/globals.scss
@@ -7,9 +7,10 @@
   font-size: 1rem;
   font-family: "Funnel Display", sans-serif;
   font-weight: 500;
-  letter-spacing: -0.5px;
+  letter-spacing: 0px;
   color: $accent-white-2;
   text-align: left;
+  line-height: 30px;
 }
 
 html,
