--- a/src/scss/ProjectPage.module.scss
+++ b/src/scss/ProjectPage.module.scss
@@ -13,7 +13,7 @@
   li {
     font-size: 0.8rem;
     background-color: $accent-grey-1;
-    padding: 0.5rem;
+    padding:  0rem 0.5rem;
     border-radius: $border-radius-small;
   }
 }
